--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
   <link href="./pages/index.css" rel="stylesheet">
 </head>
 <body class="body">
-  <div class="root">
-  <header class="header">
-  <img src="/russian-travel/images/__logo.png" alt="логотип" class="header__logo">
-  <ul class="header__lang-pick">
-    <li>
-      <a class="header__lang-link">Ru</a>
-    </li>
-    <li>
-      <a class="header__lang-link">Ru</a>
-    </li>
+  <div class="root text-content text-content_size_normal">
+    <header class="header root__header">
+      <a class="link" href="#" target="_blank" rel="noopener noreferrer">
+        <img src="../russian-travel/images/__logo.png" alt="Ссылка на проект о Путешествиях">
+      </a>
+      <ul class="language-picker text-subtitle text-subtitle_size_normal">
+        <li class="language-picker__item language-picker__item_is-current">
+          <a class="link link_no-hover">Ru</a>
+        </li>
+        <li class="language-picker__item">
+          <a class="link link_no-hover">En</a>
+        </li>
+      </ul>
+    </header>
+    <main>
 
-  </ul>
-  </header>
-  <main></main>
-  <footer></footer>
+    </main>
+    <footer></footer>
 
   </div>
 </body>
