--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="page">
 	<header class="header">
-		<img class="header__logo" src="./images/logo.svg" alt="Логотип">
+		<img class="header__logo" src="./images/__logo.png" alt="Логотип">
 		<ul class="header__lang-links">
 			<li>
 				<a class="header__lang-link header__lang-link_active" href="/">Ru</a>
@@ -199,7 +199,7 @@
 			<a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
 			<a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
 		</nav>
-		<p class="footer__copyright">© 2023. Роман Шахтаров</p>
+		<p class="footer__copyright">© 2023. Олег Мацкевич</p>
 	</footer>
 
 
