--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="page">
 	<header class="header">
-		<img class="header__logo" src="./images/__logo.png" alt="Логотип">
+		<img class="header__logo" src="./images/__logo.svg" alt="Логотип">
 		<ul class="header__lang-links">
 			<li>
 				<a class="header__lang-link header__lang-link_active" href="/">Ru</a>
